--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Your Weather, Your Way</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans|Roboto" rel="stylesheet">
     <link rel="icon" href="assets/icon.png">
   </head>
   <body class="core">
@@ -13,8 +13,8 @@
       <section class="header-container">
         <nav class="header-nav">
           <ul class="list-nav">
-            <li class="list-nav-elem list-nav-elem-left">Outline</li>
-            <li class="list-nav-elem list-nav-elem-right">Visuals</li>
+            <li class="list-nav-elem list-nav-elem-left"><a href="#outline">Outline</a></li>
+            <li class="list-nav-elem list-nav-elem-right"><a href="#visuals">Visuals</a></li>
             <!-- <li class="list-nav-elem">Item Three</li>
             <li class="list-nav-elem">Item Four</li> -->
           </ul>
@@ -24,7 +24,7 @@
         </div>
       </section>
     </header>
-    <section class="render">
+    <section class="page-content">
       <div class="page">
         <div class="page-title">
           <h1>Your Weather Your Way</h1>
@@ -33,12 +33,12 @@
           <div class="page-background"></div>
         </div>
         <main id="main">
-          <div id="outline" class="node">
+          <div id="outline" class="node" name="outline">
             <div class="intro container-element">
               <div class="container container-base">
                 <h2>Outline</h2>
                 <p>
-                  4C is a weather application that offers user the ability to customise their own interface. The problem with current weather applications is that they don’t display the information users actually want. On the contrary, weather websites often provide too much information, and it takes users too long to understand and process what they are seeing.
+                  4C is a weather application that offers users the ability to customise their own interface. The problem with current weather applications is that they don’t display the information users actually want. On the contrary, weather websites often provide too much information, and it takes users too long to understand and process what they are seeing.
                 </p>
                 <p>
                   4C is targeting the gap in this market - allowing users to select the weather components that matter to them. The landing screen depicts a maximum of four weather components which can be changed at any time...
