--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Your Weather, Your Way</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans|Roboto" rel="stylesheet">
-    <link rel="icon" href="assets/icon.png">
+    <link rel="icon" href="assets/header-icon.svg">
   </head>
   <body class="core">
     <header id="header">
@@ -15,12 +15,10 @@
           <ul class="list-nav">
             <li class="list-nav-elem list-nav-elem-left"><a href="#outline">Outline</a></li>
             <li class="list-nav-elem list-nav-elem-right"><a href="#visuals">Visuals</a></li>
-            <!-- <li class="list-nav-elem">Item Three</li>
-            <li class="list-nav-elem">Item Four</li> -->
           </ul>
         </nav>
         <div class="header-logo">
-          <a href="#"><img id="logo" src="assets/icon.svg"></a>
+          <a href="#"><img id="logo" src="assets/header-icon.svg"></a>
         </div>
       </section>
     </header>
@@ -43,6 +41,21 @@
                 <p>
                   4C is targeting the gap in this market - allowing users to select the weather components that matter to them. The landing screen depicts a maximum of four weather components which can be changed at any time...
                 </p>
+
+              </div>
+            </div>
+          </div>
+          <div id="visuals" class="node" name="visuals">
+            <div class="intro container-element">
+              <div class="container container-base">
+                <h2>Visuals</h2>
+                <p>
+                  4C is a weather application that offers users the ability to customise their own interface. The problem with current weather applications is that they don’t display the information users actually want. On the contrary, weather websites often provide too much information, and it takes users too long to understand and process what they are seeing.
+                </p>
+                <p>
+                  4C is targeting the gap in this market - allowing users to select the weather components that matter to them. The landing screen depicts a maximum of four weather components which can be changed at any time...
+                </p>
+
               </div>
             </div>
           </div>
