added weather component pngs and new icon

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Your Weather, Your Way</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans|Roboto" rel="stylesheet">
-    <link rel="icon" href="assets/header-icon.svg">
+    <link rel="icon" href="assets/icon_1.png">
   </head>
   <body class="core">
     <header id="header">
@@ -34,14 +34,31 @@
           <div id="outline" class="node" name="outline">
             <div class="intro container-element">
               <div class="container container-base">
-                <h2>Outline</h2>
-                <p>
-                  4C is a weather application that offers users the ability to customise their own interface. The problem with current weather applications is that they don’t display the information users actually want. On the contrary, weather websites often provide too much information, and it takes users too long to understand and process what they are seeing.
-                </p>
-                <p>
-                  4C is targeting the gap in this market - allowing users to select the weather components that matter to them. The landing screen depicts a maximum of four weather components which can be changed at any time...
-                </p>
-
+                  <div class="example-text">
+                    <h2>Personal</h2>
+                    <p>
+                      Are you sick of seeing weather information that's irrelevant to you? Is it doing your head in trying to understand all the graphs and numbers that don't make any sense? 4C lets you customise your home screen to display the weather information YOU want to see.
+                    </p>
+                  </div>
+                  <!-- <img class="example-img" src="assets/wind.png"> -->
+              </div>
+              <div class="container container-base">
+                <div class="example-text">
+                  <h2>Local</h2>
+                  <p>
+                    4C draws from a number of local and national weather data services. You can even sync it to your BloomSky<sup>TM</sup> weather station, giving you easy access to weather information just outside your front door.
+                  </p>
+                </div>
+                <!-- <img class="example example-right" src="assets/cloud.png"> -->
+              </div>
+              <div class="container container-base">
+                <div class="example-text">
+                  <h2>Easy</h2>
+                  <p>
+                    Simple drag-drop and resize functionality allows you to reshuffle the home screen with ease. It's simple to pick what weather information you'd like to see in the Settings menu - where you can also change the colour scheme.
+                  </p>
+              </div>
+                <!-- <img class="example" src="assets/rain.png"> -->
               </div>
             </div>
           </div>
@@ -49,13 +66,6 @@
             <div class="intro container-element">
               <div class="container container-base">
                 <h2>Visuals</h2>
-                <p>
-                  4C is a weather application that offers users the ability to customise their own interface. The problem with current weather applications is that they don’t display the information users actually want. On the contrary, weather websites often provide too much information, and it takes users too long to understand and process what they are seeing.
-                </p>
-                <p>
-                  4C is targeting the gap in this market - allowing users to select the weather components that matter to them. The landing screen depicts a maximum of four weather components which can be changed at any time...
-                </p>
-
               </div>
             </div>
           </div>
