refactored outline content

--- a/index.html
+++ b/index.html
@@ -34,31 +34,26 @@
           <div id="outline" class="node" name="outline">
             <div class="intro container-element">
               <div class="container container-base">
-                  <div class="example-text">
-                    <h2>Personal</h2>
+                  <div class="example example-half">
+                    <h2>Aims</h2>
                     <p>
-                      Are you sick of seeing weather information that's irrelevant to you? Is it doing your head in trying to understand all the graphs and numbers that don't make any sense? 4C lets you customise your home screen to display the weather information YOU want to see.
+                      To provide a weather forecast experience that is personal, local, and easy. In offering users the ability to customise their own interface, 4C will strip all the irrelevant numbers and graphs that don't make sense and display what YOU want to see.
                     </p>
                   </div>
-                  <!-- <img class="example-img" src="assets/wind.png"> -->
-              </div>
-              <div class="container container-base">
-                <div class="example-text">
-                  <h2>Local</h2>
+                <div class="example example-half example-right">
+                  <h2>Target Audience</h2>
                   <p>
-                    4C draws from a number of local and national weather data services. You can even sync it to your BloomSky<sup>TM</sup> weather station, giving you easy access to weather information just outside your front door.
+                    Everyone. The service 4C will provide is already used across many apps and websites all over the world. The point of difference is that it should appeal to everyone as they have control over what they want to see.
                   </p>
                 </div>
-                <!-- <img class="example example-right" src="assets/cloud.png"> -->
               </div>
               <div class="container container-base">
-                <div class="example-text">
-                  <h2>Easy</h2>
+                <div class="example example-full">
+                  <h2>Technical Construction</h2>
                   <p>
-                    Simple drag-drop and resize functionality allows you to reshuffle the home screen with ease. It's simple to pick what weather information you'd like to see in the Settings menu - where you can also change the colour scheme.
+                    4C will be built as a web application, meaning users will not have to download an app, and it can be used on as many devices as possible. This means it will be built using HTML5, CSS3 and Javascript. It will harness relevant Javascript libraries such as InteractJS and Packery for the module functionality, as well as the APIs of Metservice and BloomSky to retrieve the weather data.
                   </p>
               </div>
-                <!-- <img class="example" src="assets/rain.png"> -->
               </div>
             </div>
           </div>
