added colour scheme SVGs

--- a/index.html
+++ b/index.html
@@ -60,7 +60,27 @@
           <div id="visuals" class="node" name="visuals">
             <div class="intro container-element">
               <div class="container container-base">
-                <h2>Visuals</h2>
+                <div class="example">
+                  <h2>Visual Direction</h2>
+                </div>
+                <div class="example">
+                  <img src="assets/colour1.svg">
+                </div>
+                <div class="example">
+                  <img src="assets/colour2.svg">
+                </div>
+                <div class="example">
+                  <img src="assets/colour3.svg">
+                </div>
+              </div>
+              <div class="container container-base">
+                <h2>User Interactions</h2>
+              </div>
+              <div class="container container-base">
+                <h2>Customer Journey</h2>
+              </div>
+              <div class="container container-base">
+                <h2>Mockups</h2>
               </div>
             </div>
           </div>
