resized text on colour SVGs, added font SVGs and customer journey map

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Your Weather, Your Way</title>
+    <link rel="stylesheet" type="text/css" href="http://meyerweb.com/eric/tools/css/reset/reset.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans|Roboto" rel="stylesheet">
     <link rel="icon" href="assets/icon_1.png">
@@ -62,6 +63,9 @@
               <div class="container container-base">
                 <div class="example">
                   <h2>Visual Direction</h2>
+                  <p>
+                    While users will be able to select from a number of different colour schemes, the default scheme has been created using two contrasting tones. The green and purple will form the main UI, while the light grey adds some contrast for primary elements. White has been selected for the majority of textual elements.
+                  </p>
                 </div>
                 <div class="example">
                   <img src="assets/colour1.svg">
@@ -72,12 +76,28 @@
                 <div class="example">
                   <img src="assets/colour3.svg">
                 </div>
+                <div class="example">
+                  <p>
+                    Two sans-serif fonts will be used. This choice was fairly evident, as serif fonts do not fit into the simple, minimal and informed aesthetic 4C aims to achieve. <i>Noto Sans</i> will serve as the main font-family, used for paragraphs and smaller text elements. <i>Roboto</i> is a very strong bold font, and will be used for larger text elements, such as the temperature or rainfall weather components.
+                  </p>
+                </div>
+                <div class="example">
+                  <img src="assets/noto-sans.svg">
+                </div>
+                <div class="example">
+                  <img src="assets/roboto.svg">
+                </div>
               </div>
               <div class="container container-base">
                 <h2>User Interactions</h2>
               </div>
               <div class="container container-base">
-                <h2>Customer Journey</h2>
+                <div class="example">
+                  <h2>Customer Journey</h2>
+                </div>
+                <div class="example">
+                  <img src="assets/customer-journey-map.svg">
+                </div>
               </div>
               <div class="container container-base">
                 <h2>Mockups</h2>
