--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans|Roboto" rel="stylesheet">
     <link rel="icon" href="assets/icon_1.png">
+    <script src="scripts/zenscroll-min.js"></script>
   </head>
   <body class="core">
     <header id="header">
@@ -78,7 +79,7 @@
                 </div>
                 <div class="example">
                   <p>
-                    Two sans-serif fonts will be used. This choice was fairly evident, as serif fonts do not fit into the simple, minimal and informed aesthetic 4C aims to achieve. <i>Noto Sans</i> will serve as the main font-family, used for paragraphs and smaller text elements. <i>Roboto</i> is a very strong bold font, and will be used for larger text elements, such as the temperature or rainfall weather components.
+                    Two sans-serif fonts will be used. This choice was fairly evident, as serif fonts do not fit into the simple, minimal and informative aesthetic 4C aims to achieve. <i>Noto Sans</i> will serve as the main font-family, used for paragraphs and smaller text elements. <i>Roboto</i> is a very strong bold font, and will be used for larger text elements, such as the temperature or rainfall weather components.
                   </p>
                 </div>
                 <div class="example">
@@ -89,7 +90,9 @@
                 </div>
               </div>
               <div class="container container-base">
-                <h2>User Interactions</h2>
+                <div class="example">
+                  <h2>User Interactions</h2>
+                </div>
               </div>
               <div class="container container-base">
                 <div class="example">
@@ -100,7 +103,9 @@
                 </div>
               </div>
               <div class="container container-base">
-                <h2>Mockups</h2>
+                <div class="example">
+                  <h2>Mockups</h2>
+                </div>
               </div>
             </div>
           </div>
