added resizing header

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans|Roboto" rel="stylesheet">
     <link rel="icon" href="assets/icon_1.png">
-    <script src="scripts/zenscroll-min.js"></script>
+    <script src="js/zenscroll-min.js"></script>
+    <script src="js/header-resize.js"></script>
   </head>
   <body class="core">
     <header id="header">
