Added modular example using Packery and Draggabilly

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans|Roboto" rel="stylesheet">
     <link rel="icon" href="assets/icon_1.png">
     <script src="js/zenscroll-min.js"></script>
+    <script src="js/packery.pkgd.min.js"></script>
+    <script src="js/draggabilly.pkgd.min.js"></script>
     <script src="js/header-resize.js"></script>
   </head>
   <body class="core">
@@ -107,11 +109,30 @@
                 <div class="example">
                   <h2>Mockups</h2>
                 </div>
+                <div class="example">
+                  <!-- <iframe width="322" height="568" src="https://xd.adobe.com/embed/cbb6510d-fd61-4f93-94d1-c195be6bcce3/" frameborder="0" allowfullscreen></iframe> -->
+                </div>
+              </div>
+              <div class="container container-base">
+                <div class="example">
+                  <h2>Modular Functionality</h2>
+                </div>
+                <div class="example">
+                  <div class="grid">
+                    <div class="grid-sizer"></div>
+                    <div class="gutter-sizer"></div>
+                    <div class="grid-item grid-item-width3 temp"></div>
+                    <div class="grid-item wind"></div>
+                    <div class="grid-item cloud"></div>
+                    <div class="grid-item rain"></div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </main>
       </div>
     </section>
+    <script src="js/example-packery.js"></script>
   </body>
 </html>
