Added modular interface content text Removed old images

--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
                 </div>
               </div>
               <div class="container container-base">
-                <div class="example example-full">
+                <div class="example">
                   <h2>Technical Construction</h2>
                   <p>
-                    4C will be built as a web application, meaning users will not have to download an app, and it can be used on as many devices as possible. This means it will be built using HTML5, CSS3 and Javascript. It will harness relevant Javascript libraries such as InteractJS and Packery for the module functionality, as well as the APIs of Metservice and BloomSky to retrieve the weather data.
+                    4C will be built as a web application, meaning users will not have to download an app, and it can be used on as many devices as possible. This means it will be built using HTML5, CSS3 and Javascript. It will harness relevant Javascript libraries for the modular user interface functionality, as well as the APIs of Metservice and BloomSky to retrieve the weather data.
                   </p>
-              </div>
+                </div>
               </div>
             </div>
           </div>
@@ -115,9 +115,20 @@
               </div>
               <div class="container container-base">
                 <div class="example">
-                  <h2>Modular Functionality</h2>
+                  <h2>Modular Interface Functionality</h2>
+                  <p>
+                    Modular design requires breaking down a design into small parts (modules), designed each independently, and then later combining them into a larger system. Modular UI and UX patterns will be followed to create 4C.This means creating a structured UI system, and understanding how its components can be used to create the user flow. This will allow users to customise the interface to fit their needs.
+                  </p>
                 </div>
-                <div class="example">
+                <div class="example example-half">
+                  <p>
+                    <strong>INTERACT:</strong> Drag and drop the weather component modules to experience how 4C will utilise the <a href="http://packery.metafizzy.co/">Packery</a> and <a href="http://draggabilly.desandro.com/">Draggabilly</a> Javascript libraries to achieve a modular UI.
+                  </p>
+                  <p>
+                   Users will also be able to resize the modules, and select their primary weather component.
+                  </p>
+                </div>
+                <div class="example example-half example-right">
                   <div class="grid">
                     <div class="grid-sizer"></div>
                     <div class="gutter-sizer"></div>
