Redo of colour and font imagery to be more responsive

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav class="header-nav">
           <ul class="list-nav">
             <li class="list-nav-elem list-nav-elem-left"><a href="#outline">Outline</a></li>
-            <li class="list-nav-elem list-nav-elem-right"><a href="#visuals">Visuals</a></li>
+            <li class="list-nav-elem list-nav-elem-right"><a href="#process">Process</a></li>
           </ul>
         </nav>
         <div class="header-logo">
@@ -37,7 +37,7 @@
         </div>
         <main id="main">
           <div id="outline" class="node" name="outline">
-            <div class="intro container-element">
+            <div class="container-element">
               <div class="container container-base">
                   <div class="example example-half">
                     <h2>Aims</h2>
@@ -56,14 +56,14 @@
                 <div class="example">
                   <h2>Technical Construction</h2>
                   <p>
-                    4C will be built as a web application, meaning users will not have to download an app, and it can be used on as many devices as possible. This means it will be built using HTML5, CSS3 and Javascript. It will harness relevant Javascript libraries for the modular user interface functionality, as well as the APIs of Metservice and BloomSky to retrieve the weather data.
+                    4C will be built as a web application, meaning users will not have to download an app, and it can be used on as many devices as possible. This means it will be built using HTML5, CSS3 and Javascript. It will harness relevant Javascript libraries for the modular user interface functionality, as well as the APIs of <a href="http://www.metservice.com/national/home">Metservice</a> and <a href="https://www.bloomsky.com/">BloomSky</a> to retrieve the weather data.
                   </p>
                 </div>
               </div>
             </div>
           </div>
-          <div id="visuals" class="node" name="visuals">
-            <div class="intro container-element">
+          <div id="process" class="node" name="visuals">
+            <div class="container-element">
               <div class="container container-base">
                 <div class="example">
                   <h2>Visual Direction</h2>
@@ -71,40 +71,47 @@
                     While users will be able to select from a number of different colour schemes, the default scheme has been created using two contrasting tones. The green and purple will form the main UI, while the light grey adds some contrast for primary elements. White has been selected for the majority of textual elements.
                   </p>
                 </div>
-                <div class="example">
-                  <img src="assets/colour1.svg">
-                </div>
-                <div class="example">
-                  <img src="assets/colour2.svg">
-                </div>
-                <div class="example">
-                  <img src="assets/colour3.svg">
+                <div class="colours">
+                  <div class="example">
+                    <img src="assets/colour1.svg">
+                  </div>
+                  <div class="example">
+                    <img src="assets/colour2.svg">
+                  </div>
+                  <div class="example">
+                    <img src="assets/colour3.svg">
+                  </div>
                 </div>
                 <div class="example">
                   <p>
                     Two sans-serif fonts will be used. This choice was fairly evident, as serif fonts do not fit into the simple, minimal and informative aesthetic 4C aims to achieve. <i>Noto Sans</i> will serve as the main font-family, used for paragraphs and smaller text elements. <i>Roboto</i> is a very strong bold font, and will be used for larger text elements, such as the temperature or rainfall weather components.
                   </p>
                 </div>
-                <div class="example">
-                  <img src="assets/noto-sans.svg">
-                </div>
-                <div class="example">
-                  <img src="assets/roboto.svg">
+                <div class="fonts">
+                  <div class="example">
+                    <img src="assets/noto-sans.svg">
+                  </div>
+                  <div class="example">
+                    <img src="assets/roboto.svg">
+                  </div>
                 </div>
               </div>
               <div class="container container-base">
                 <div class="example">
                   <h2>User Interactions</h2>
                 </div>
+                <div class="example">
+                  <div class="interaction-graph"></div>
+                </div>
               </div>
-              <div class="container container-base">
+              <!-- <div class="container container-base">
                 <div class="example">
                   <h2>Customer Journey</h2>
                 </div>
                 <div class="example">
                   <img src="assets/customer-journey-map.svg">
                 </div>
-              </div>
+              </div> -->
               <div class="container container-base">
                 <div class="example">
                   <h2>Mockups</h2>
