Fixed mockup prototype positioning Removed old images

--- a/index.html
+++ b/index.html
@@ -96,14 +96,14 @@
                   </div>
                 </div>
               </div>
-              <div class="container container-base">
+              <!-- <div class="container container-base">
                 <div class="example">
                   <h2>User Interactions</h2>
                 </div>
                 <div class="example">
                   <div class="interaction-graph"></div>
                 </div>
-              </div>
+              </div> -->
               <!-- <div class="container container-base">
                 <div class="example">
                   <h2>Customer Journey</h2>
@@ -113,18 +113,23 @@
                 </div>
               </div> -->
               <div class="container container-base">
-                <div class="example">
-                  <h2>Mockups</h2>
+                <div class="example example-half">
+                  <h2>Mockup Prototype</h2>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. In in purus ut nisl posuere suscipit. Vivamus libero velit, vestibulum a convallis non, tincidunt eget nibh. Vivamus et rhoncus enim. Vestibulum venenatis dolor in ultrices lobortis. In ut suscipit felis. Donec id neque nec urna molestie rhoncus sit amet id massa. Integer rutrum aliquet ante sed suscipit. Cras ut lobortis arcu. Proin nec leo semper justo dignissim venenatis. In egestas dapibus fringilla. Proin eget posuere justo. Mauris tincidunt metus dui, nec accumsan orci imperdiet ac. Vivamus lacinia cursus purus eget iaculis. Aenean consequat dolor quis vulputate finibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+                  </p>
                 </div>
-                <div class="example">
-                  <!-- <iframe width="322" height="568" src="https://xd.adobe.com/embed/cbb6510d-fd61-4f93-94d1-c195be6bcce3/" frameborder="0" allowfullscreen></iframe> -->
+                <div class="example example-half example-right">
+                  <div class="prototype-container">
+                    <iframe src="https://xd.adobe.com/embed/4271bba6-d57e-49a3-9430-e370ed756804/"></iframe>
+                </div>
                 </div>
               </div>
               <div class="container container-base">
                 <div class="example">
                   <h2>Modular Interface Functionality</h2>
                   <p>
-                    Modular design requires breaking down a design into small parts (modules), designed each independently, and then later combining them into a larger system. Modular UI and UX patterns will be followed to create 4C.This means creating a structured UI system, and understanding how its components can be used to create the user flow. This will allow users to customise the interface to fit their needs.
+                    Modular design requires breaking down a design into small parts (modules), designing each independently, and then later combining them into a larger system. Modular UI and UX patterns will be followed to create 4C. This means creating a structured UI system, and understanding how its components can be used to create the user flow. This will allow users to customise the interface to fit their needs.
                   </p>
                 </div>
                 <div class="example example-half">
