--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <section class="header-container">
         <nav class="header-nav">
           <ul class="list-nav">
-            <li class="list-nav-elem list-nav-elem-left"><a href="#outline">Outline</a></li>
+            <li class="list-nav-elem list-nav-elem-left"><a href="#overview">Overview</a></li>
             <li class="list-nav-elem list-nav-elem-right"><a href="#process">Process</a></li>
           </ul>
         </nav>
@@ -30,13 +30,13 @@
     <section class="page-content">
       <div class="page">
         <div class="page-title">
-          <h1>Your Weather Your Way</h1>
+          <h1>Your Weather, Your Way</h1>
         </div>
         <div class="page-hero">
           <div class="page-background"></div>
         </div>
         <main id="main">
-          <div id="outline" class="node" name="outline">
+          <div id="overview" class="node" name="outline">
             <div class="container-element">
               <div class="container container-base">
                   <div class="example example-half">
@@ -48,7 +48,7 @@
                 <div class="example example-half example-right">
                   <h2>Target Audience</h2>
                   <p>
-                    Everyone. The service 4C will provide is already used across many apps and websites all over the world. The point of difference is that it should appeal to everyone as they have control over what they want to see.
+                    Everyone. Much of the weather information 4C will provide is already accessible across many apps and websites all over the world. The point of difference is that the service will appeal to everyone as they have control over what they see.
                   </p>
                 </div>
               </div>
@@ -56,8 +56,11 @@
                 <div class="example">
                   <h2>Technical Construction</h2>
                   <p>
-                    4C will be built as a web application, meaning users will not have to download an app, and it can be used on as many devices as possible. This means it will be built using HTML5, CSS3 and Javascript. It will harness relevant Javascript libraries for the modular user interface functionality, as well as the APIs of <a href="http://www.metservice.com/national/home">Metservice</a> and <a href="https://www.bloomsky.com/">BloomSky</a> to retrieve the weather data.
+                    4C will be built as a web application, meaning users will not have to download an app, so that it can be used on as many devices as possible. This means it will be built using HTML5, CSS3 and Javascript. It will harness relevant Javascript libraries for the modular user interface functionality, as well as the APIs of <a href="http://www.metservice.com/national/home">Metservice</a> and <a href="https://www.bloomsky.com/">BloomSky</a> to retrieve the weather data.
                   </p>
+                  <!-- <p>
+                    BloomSky Shiet and/or imagery
+                  </p> -->
                 </div>
               </div>
             </div>
@@ -68,7 +71,7 @@
                 <div class="example">
                   <h2>Visual Direction</h2>
                   <p>
-                    While users will be able to select from a number of different colour schemes, the default scheme has been created using two contrasting tones. The green and purple will form the main UI, while the light grey adds some contrast for primary elements. White has been selected for the majority of textual elements.
+                    While users will be able to select from a number of different themes, the default colour scheme is comprised of two contrasting tones. The green and purple colours will form the main UI, while a light grey will add some contrast for primary elements. White has been selected for the large, informative textual elements and the purple will be used for more secondary text.
                   </p>
                 </div>
                 <div class="colours">
