Changed colour SVGs layout Added more spacing

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <script src="js/zenscroll-min.js"></script>
     <script src="js/packery.pkgd.min.js"></script>
     <script src="js/draggabilly.pkgd.min.js"></script>
-    <script src="js/header-resize.js"></script>
   </head>
   <body class="core">
     <header id="header">
@@ -65,7 +64,7 @@
               </div>
             </div>
           </div>
-          <div id="process" class="node" name="visuals">
+          <div id="process" class="node" name="process">
             <div class="container-element">
               <div class="container container-base">
                 <div class="example">
@@ -99,22 +98,6 @@
                   </div>
                 </div>
               </div>
-              <!-- <div class="container container-base">
-                <div class="example">
-                  <h2>User Interactions</h2>
-                </div>
-                <div class="example">
-                  <div class="interaction-graph"></div>
-                </div>
-              </div> -->
-              <!-- <div class="container container-base">
-                <div class="example">
-                  <h2>Customer Journey</h2>
-                </div>
-                <div class="example">
-                  <img src="assets/customer-journey-map.svg">
-                </div>
-              </div> -->
               <div class="container container-base">
                 <div class="example example-half">
                   <h2>Mockup Prototype</h2>
@@ -160,5 +143,6 @@
       </div>
     </section>
     <script src="js/example-packery.js"></script>
+    <script src="js/header-resize.js"></script>
   </body>
 </html>
