--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
                   <div class="example example-half">
                     <h2>Aims</h2>
                     <p>
-                      To provide a weather forecast experience that is personal, local, and easy. In offering users the ability to customise their own interface, 4C will strip all the irrelevant numbers and graphs that don't make sense and display what YOU want to see.
+                      To provide a weather forecast experience that is personal, local, and easy. 4C will offer users the ability to customise their own interface, thereby stripping all the irrelevant numbers and graphs that don't make sense and displaying what YOU want to see.
                     </p>
                   </div>
                 <div class="example example-half example-right">
                   <h2>Target Audience</h2>
                   <p>
-                    Everyone. Much of the weather information 4C will provide is already accessible across many apps and websites all over the world. The point of difference is that the service will appeal to everyone, as they have control over what they see.
+                    Everyone. Much of the weather information 4C will provide is already accessible across many apps and websites all over the world. The point of difference is that the service will appeal to everyone, as they have control over what they do and don't see.
                   </p>
                 </div>
               </div>
